--- a/www/pages/finalize-publish-ride.html
+++ b/www/pages/finalize-publish-ride.html
@@ -286,7 +286,7 @@
     });
 
     $on("pageInit", () => {
-	$f7.dialog.close();
+      $f7.dialog.close();
       const departure = localStorage.getItem("departureName");
       const destination = localStorage.getItem("destinationName");
       const departureDate = localStorage.getItem("departureDate");
@@ -335,7 +335,7 @@
         })
           .then((response) => {
             if (!response.ok) {
-			$f7.dialog.close();
+              $f7.dialog.close();
               if (response.status == 401) {
                 app.dialog.alert(
                   "Ooups! E-mail ou mot de passe incorrect ressayez svp !"
@@ -414,7 +414,7 @@
               })
                 .then((response) => {
                   if (!response.ok) {
-				  $f7.dialog.close();
+                    $f7.dialog.close();
                     throw new Error("Network response was not ok");
                     app.dialog.alert(
                       "Ooups! Une erreur s'est produite ressayez svp !"
@@ -467,7 +467,7 @@
           })
             .then((response) => {
               if (!response.ok) {
-			  $f7.dialog.close();
+                $f7.dialog.close();
                 throw new Error("Network response was not ok");
                 app.dialog.alert(
                   "Ooups! Une erreur s'est produite ressayez svp !"
@@ -505,6 +505,7 @@
       const car = localStorage.getItem("car");
       const amount = localStorage.getItem("amount");
       const userId = localStorage.getItem("userId");
+      const lang = localStorage.getItem("lang");
 
       // Form data to be sent in the request body
       const formData = {
@@ -517,6 +518,7 @@
         destinationLocation: destinationLocation,
         driver: userId,
         car: car,
+        lang: lang,
       };
 
       // Make a POST request using the Fetch API
@@ -529,7 +531,7 @@
       })
         .then((response) => {
           if (!response.ok) {
-		  $f7.dialog.close();
+            $f7.dialog.close();
             if (response.status == 401) {
               app.dialog.alert(
                 "Cette annonce existe déjà ! Veuillez essayer à nouveau SVP !"
